fix dragable function

--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
       </nav>
       <!-- Selection -->
       <aside class="selection background">
-        <!-- LIST OPTIONS -->
+        <!-- OPTIONS -->
         <select name="meal-type" id="meal-type">
           <option>CHOOSE MEAL TYPE</option>
           <option value="ONE">ONE</option>
           <option value="TWO">TWO</option>
           <option value="THREE">THREE</option>
         </select>
-        <!-- CARDS -->
+        <!-- Lists -->
         <ul class="list">
-          <!-- single card -->
-          <li class="list-item card-container drag-item" draggable="true">
-            <div class="drag">
+          <!-- single  -->
+          <li class="list-item " draggable="true">
+            <div class="drag-icon">
               <i class="fas fa-grip-vertical"></i>
             </div>
             <img src="./img/thumb.jpeg" alt="thumbnail" />
@@ -88,10 +88,20 @@
       <!-- TABLE -->
       <section class="table background">
         <ul class="list list-1">
-          <!-- single card -->
-          <li class="list-item card-container drag-item" draggable="true">1</li>
-          <li class="list-item card-container drag-item" draggable="true">2</li>
-          <li class="list-item card-container drag-item" draggable="true">3</li>
+          <!-- single  -->
+          <li class="list-item " draggable="true">
+            <div class="drag-icon ">
+              <i class="fas fa-grip-vertical"></i>
+            </div>
+            <img src="./img/thumb.jpeg" alt="thumbnail" />
+            <div class="content">
+              <h3 class="title">HomeMade Salad</h3>
+              <p class="calories">(250 calories)</p>
+            </div>
+          </li>
+          <li class="list-item" draggable="true">1</li>
+          <li class="list-item" draggable="true">2</li>
+          <li class="list-item" draggable="true">3</li>
         </ul>
         <ul class="list list-2"></ul>
       </section>
