--- a/index.html
+++ b/index.html
@@ -56,15 +56,17 @@
       </section>
       <!-- NAVE -->
       <nav class="nav">
-        <button class="button btn-1">CLEAR</button> 
+        <button class="button btn-1">CLEAR</button>
         <button class="button btn-2">SAVE</button>
         <button class="button btn-3">RANDOM</button>
-        <i id="setting-btn" class="fas fa-cog"></i>
+        <div id="setting-btn">
+          <i class="fas fa-cog"></i>
+        </div>
       </nav>
       <!-- Selection -->
       <aside class="selection background">
         <!-- OPTIONS -->
-        <select name="meal-type" id="meal-type">
+        <select class="custom-select" name="meal-type" id="meal-type">
           <option>CHOOSE MEAL TYPE</option>
           <option value="ONE">ONE</option>
           <option value="TWO">TWO</option>
@@ -77,12 +79,18 @@
             <div class="drag-icon">
               <i class="fas fa-grip-vertical"></i>
             </div>
-            <img src="./img/thumb.jpeg" draggable="false" alt="thumbnail" />
+            <img
+              class="image"
+              src="./img/thumb.jpeg"
+              draggable="false"
+              alt="thumbnail"
+            />
             <div class="content">
               <h3 class="title">HomeMade Salad</h3>
               <p class="calories">(250 calories)</p>
             </div>
           </li>
+          <!-- end single  -->
         </ul>
       </aside>
       <!-- TABLE -->
@@ -111,6 +119,6 @@
         <button id="grocery-btn">CREATE GROCERY LIST</button>
       </footer>
     </div>
-    <script src="main.js"></script>
+    <script type="module" src="main.js" ></script>
   </body>
 </html>
