implemented get api and inject in html succesfully

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
           <option value="THREE">THREE</option>
         </select>
         <!-- Lists -->
-        <ul class="list">
+        <ul id="list">
           <!-- single card  -->
           <li class="list-item" draggable="true">
-            <!-- <div class="drag-icon">
+            <div class="drag-icon">
               <i id="drag" class="fas fa-grip-vertical"></i>
               <i id="trash" class="far fa-trash-alt"></i>
             </div>
@@ -99,21 +99,35 @@
               <p class="item-protein">Protein: 25g</p>
               <p class="item-carbs">Carbs: 25g</p>
               <p class="item-fat">Fat: 25g</p>
-            </article> -->
+            </article>
           </li>
           <!-- end single card  -->
-        <!-- Lists -->
-        <ul class="list">
           <!-- single card  -->
           <li class="list-item" draggable="true">
-
-          </li>
-          <!-- end single card  -->
-        <!-- Lists -->
-        <ul class="list">
-          <!-- single card  -->
-          <li class="list-item" draggable="true">
-            
+            <div class="drag-icon">
+              <i id="drag" class="fas fa-grip-vertical"></i>
+              <i id="trash" class="far fa-trash-alt"></i>
+            </div>
+            <div class="img-wrapper">
+              <button draggable="false" class="item-info">
+                <a draggable="false" href="#">VIEW</a>
+              </button>
+              <img
+                class="item-img"
+                src="./img/thumb.jpeg"
+                draggable="false"
+                alt="thumbnail"
+              />
+            </div>
+            <article class="content-front">
+              <h3 class="item-title">Home Made Salad</h3>
+              <p class="item-calories">(250 cal)</p>
+            </article>
+            <article class="content-back">
+              <p class="item-protein">Protein: 25g</p>
+              <p class="item-carbs">Carbs: 25g</p>
+              <p class="item-fat">Fat: 25g</p>
+            </article>
           </li>
           <!-- end single card  -->
         </ul>
@@ -130,13 +144,42 @@
           <div class="day"><h3>SUN</h3></div>
         </article>
         <ul class="lists">
-          <ul class="list table-list list-1"></ul>
-          <ul class="list table-list list-2"></ul>
-          <ul class="list table-list list-3"></ul>
-          <ul class="list table-list list-4"></ul>
-          <ul class="list table-list list-5"></ul>
-          <ul class="list table-list list-6"></ul>
-          <ul class="list table-list list-7"></ul>
+          <ul id="list" class="list-1">
+            <!-- single card  -->
+            <li class="list-item" draggable="true">
+              <div class="drag-icon">
+                <i id="drag" class="fas fa-grip-vertical"></i>
+                <i id="trash" class="far fa-trash-alt"></i>
+              </div>
+              <div class="img-wrapper">
+                <button draggable="false" class="item-info">
+                  <a draggable="false" href="#">VIEW</a>
+                </button>
+                <img
+                  class="item-img"
+                  src="./img/thumb.jpeg"
+                  draggable="false"
+                  alt="thumbnail"
+                />
+              </div>
+              <article class="content-front">
+                <h3 class="item-title">Home Made Salad</h3>
+                <p class="item-calories">(250 cal)</p>
+              </article>
+              <article class="content-back">
+                <p class="item-protein">Protein: 25g</p>
+                <p class="item-carbs">Carbs: 25g</p>
+                <p class="item-fat">Fat: 25g</p>
+              </article>
+            </li>
+            <!-- end single card  -->
+          </ul>
+          <ul id="list" class="list-2"></ul>
+          <ul id="list" class="list-3"></ul>
+          <ul id="list" class="list-4"></ul>
+          <ul id="list" class="list-5"></ul>
+          <ul id="list" class="list-6"></ul>
+          <ul id="list" class="list-7"></ul>
         </ul>
       </section>
       <!-- FOOTER -->
