fully functioned drag n drop after all meals  get load from api

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
         </article>
       </section>
-      <!-- NAVE -->
+      <!-- NAV -->
       <nav class="nav">
         <button class="button btn-1">CLEAR</button>
         <button class="button btn-2">SAVE</button>
@@ -100,34 +100,7 @@
               <p class="item-carbs">Carbs: 25g</p>
               <p class="item-fat">Fat: 25g</p>
             </article>
-          </li>
-          <!-- end single card  -->
-          <!-- single card  -->
-          <li class="list-item" draggable="true">
-            <div class="drag-icon">
-              <i id="drag" class="fas fa-grip-vertical"></i>
-              <i id="trash" class="far fa-trash-alt"></i>
-            </div>
-            <div class="img-wrapper">
-              <button draggable="false" class="item-info">
-                <a draggable="false" href="#">VIEW</a>
-              </button>
-              <img
-                class="item-img"
-                src="./img/thumb.jpeg"
-                draggable="false"
-                alt="thumbnail"
-              />
-            </div>
-            <article class="content-front">
-              <h3 class="item-title">Home Made Salad</h3>
-              <p class="item-calories">(250 cal)</p>
-            </article>
-            <article class="content-back">
-              <p class="item-protein">Protein: 25g</p>
-              <p class="item-carbs">Carbs: 25g</p>
-              <p class="item-fat">Fat: 25g</p>
-            </article>
+            <div class="item-id">1</div>
           </li>
           <!-- end single card  -->
         </ul>
