--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.0/html2canvas.js"></script>
   </head>
-  <body>
+  <body >
+    
     <!-- CONTAINER -->
-    <div class="container">
+    <div class="container" >
       <!-- LOGO -->
       <div class="logo">
         <a href="index.html"
@@ -73,10 +75,10 @@
           <option value="THREE">THREE</option>
         </select>
         <!-- Lists -->
-        <ul id="list"></ul>
+        <ul id="list" class="old-parent"></ul>
       </aside>
       <!-- TABLE -->
-      <section class="table background">
+      <section class="table background "id="capture">
         <article class="days">
           <div class="day"><h3>MON</h3></div>
           <div class="day"><h3>TUE</h3></div>
@@ -87,13 +89,13 @@
           <div class="day"><h3>SUN</h3></div>
         </article>
         <ul class="lists">
-          <ul id="list" class="list-1"></ul>
-          <ul id="list" class="list-2"></ul>
-          <ul id="list" class="list-3"></ul>
-          <ul id="list" class="list-4"></ul>
-          <ul id="list" class="list-5"></ul>
-          <ul id="list" class="list-6"></ul>
-          <ul id="list" class="list-7"></ul>
+          <ul id="list" class="list-1 new-parent"></ul>
+          <ul id="list" class="list-2 new-parent"></ul>
+          <ul id="list" class="list-3 new-parent"></ul>
+          <ul id="list" class="list-4 new-parent"></ul>
+          <ul id="list" class="list-5 new-parent"></ul>
+          <ul id="list" class="list-6 new-parent"></ul>
+          <ul id="list" class="list-7 new-parent"></ul>
         </ul>
       </section>
       <!-- MODAL -->
