--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.0/html2canvas.js"></script>
   </head>
-  <body >
-    
+  <body>
     <!-- CONTAINER -->
-    <div class="container" >
+    <div class="container">
       <!-- LOGO -->
       <div class="logo">
         <a href="index.html"
@@ -78,24 +77,29 @@
         <ul id="list" class="old-parent"></ul>
       </aside>
       <!-- TABLE -->
-      <section class="table background "id="capture">
-        <article class="days">
-          <div class="day"><h3>MON</h3></div>
-          <div class="day"><h3>TUE</h3></div>
-          <div class="day"><h3>WED</h3></div>
-          <div class="day"><h3>THU</h3></div>
-          <div class="day"><h3>FRI</h3></div>
-          <div class="day"><h3>SAT</h3></div>
-          <div class="day"><h3>SUN</h3></div>
-        </article>
+      <section class="table background" id="capture">
         <ul class="lists">
-          <ul id="list" class="list-1 new-parent"></ul>
-          <ul id="list" class="list-2 new-parent"></ul>
-          <ul id="list" class="list-3 new-parent"></ul>
-          <ul id="list" class="list-4 new-parent"></ul>
-          <ul id="list" class="list-5 new-parent"></ul>
-          <ul id="list" class="list-6 new-parent"></ul>
-          <ul id="list" class="list-7 new-parent"></ul>
+          <ul id="list" class="list-1 new-parent">
+            <div class="day disable-select"><h3>MON</h3></div>
+          </ul>
+          <ul id="list" class="list-2 new-parent">
+            <div class="day disable-select"><h3>TUE</h3></div>
+          </ul>
+          <ul id="list" class="list-3 new-parent">
+            <div class="day disable-select"><h3>WED</h3></div>
+          </ul>
+          <ul id="list" class="list-4 new-parent">
+            <div class="day disable-select"><h3>THU</h3></div>
+          </ul>
+          <ul id="list" class="list-5 new-parent">
+            <div class="day disable-select"><h3>FRI</h3></div>
+          </ul>
+          <ul id="list" class="list-6 new-parent">
+            <div class="day disable-select"><h3>SAT</h3></div>
+          </ul>
+          <ul id="list" class="list-7 new-parent">
+            <div class="day disable-select"><h3>SUN</h3></div>
+          </ul>
         </ul>
       </section>
       <!-- MODAL -->
