--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.0/html2canvas.js"></script>
   </head>
   <body>
     <!-- CONTAINER -->
@@ -74,7 +73,9 @@
           <option value="THREE">THREE</option>
         </select>
         <!-- Lists -->
-        <ul id="list" class="old-parent"></ul>
+        <ul id="list" class="old-parent">
+        </ul>
+        <button class="btn-load-more">LOAD MORE</button>
       </aside>
       <!-- TABLE -->
       <section class="table background" id="capture">
