added random function

--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
       <!-- NAV -->
       <nav class="nav">
         <button class="button btn-1">CLEAR</button>
-        <button class="button btn-2">SAVE</button>
         <button class="button btn-3">RANDOM</button>
         <div id="setting-btn">
           <i class="fas fa-cog"></i>
@@ -73,8 +72,7 @@
           <option value="THREE">THREE</option>
         </select>
         <!-- Lists -->
-        <ul id="list" class="old-parent">
-        </ul>
+        <ul id="list" class="old-parent"></ul>
         <button class="btn-load-more">LOAD MORE</button>
       </aside>
       <!-- TABLE -->
