--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     />
   </head>
   <body>
+    <!-- pre-loader -->
+    <div id="preloader">
+      <img src="./img/preloader.gif" alt="">
+    </div>
     <div id="form-container">
       <!-- slideshow -->
       <section id="slide-show">
@@ -226,7 +230,7 @@
       </section>
       <!-- FOOTER -->
       <footer class="footer">
-        <!-- <button id="grocery-btn">CREATE GROCERY LIST</button> -->
+        <button id="grocery-btn">CONTACT US</button>
       </footer>
     </div>
     <script type="module" src="main.js"></script>
