--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>API Meal Planner</title>
     <link rel="stylesheet" href="./main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
   <body>
     <!-- pre-loader -->
     <div id="preloader">
-      <img src="./img/preloader.gif" alt="">
+      <img src="./img/preloader.gif" alt="" />
     </div>
     <div id="form-container">
       <!-- slideshow -->
