--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         <div class="slideshow-container">
           <!-- Full-width images with number and caption text -->
           <div class="mySlides fade slide-1">
-            <p id="slide-show-title">Meal planning <br />made easy.</p>
+            <p id="slide-show-title">
+              Meal planner <br />
+              365,000+ recipes
+            </p>
             <img class="slide-img slide-img-1" src="img/1.png" />
           </div>
           <div class="mySlides fade">
